file (GLOB CHILDREN RELATIVE ${CMAKE_CURRENT_LIST_DIR} "*")
foreach (CHILD ${CHILDREN})
    if (IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${CHILD})
        message (STATUS "Adding plugin: ${CHILD}")
        add_subdirectory (${CHILD})
		if (REFRAMED_plugin-${CHILD})
			add_dependencies (application plugin-${CHILD})
		endif ()
    endif ()
endforeach ()
