file (GLOB CHILDREN RELATIVE ${CMAKE_CURRENT_LIST_DIR} "*")
foreach (CHILD ${CHILDREN})
    if (IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${CHILD})
        message (STATUS "Adding plugin: ${CHILD}")
        add_subdirectory (${CHILD})
		if (REFRAMED_plugin-${CHILD})
			add_dependencies (application plugin-${CHILD})
		endif ()
    endif ()
endforeach ()

if (NOT CMAKE_BUILD_TYPE MATCHES Debug)
    set (REFRAMED_plugin-debug-asserts OFF CACHE FORCE)
endif ()
